--- a/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.html
+++ b/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.html
@@ -1,16 +1,39 @@
-<ion-item text-wrap #inputContainer class="input-container" [ngClass]="{'input-container-error':isFormSubmitted() && required && !autocomplete.value}">
-  <ion-icon item-start class="bluelight-color" name="pin"> </ion-icon>
-  <ion-label floating>
-    {{placeholder}}
-  </ion-label>
-  <ion-input (blur)='onBlur()' id="googlePlacesSearchInputWrapper" [(ngModel)]="autocomplete.value" (input)="updateSearchResults()"
-    type="text" required="{{required}}"></ion-input>
-</ion-item>
-<div class="auto-complete-items" [hidden]="autocompleteItems.length == 0">
-  <ion-list>
-    <ion-item *ngFor="let item of autocompleteItems" tappable (click)="selectSearchResult(item)">
-      <ion-icon name="pin" item-start></ion-icon>
-      {{ item.description }}
-    </ion-item>
-  </ion-list>
+<div class="rw-ionic3-google-maps-autocomplete-wrapper">
+  <ion-item text-wrap #inputContainer class="input-container" [ngClass]="{'input-container-error':isFormSubmitted() && model?.required && !autocomplete.value}">
+    <ion-icon item-start name="pin" [color]="model?.iconColor" *ngIf="!model?.hideIcon"></ion-icon>
+    <!-- default input-->
+    <ion-label *ngIf="!model.inputType" fixed>{{model?.placeholder|translate}}</ion-label>
+    <!-- fixed input -->
+    <ion-label *ngIf="model.inputType == eInputType.fixed" fixed>{{model?.placeholder|translate}}</ion-label>
+    <!-- floating input -->
+    <ion-label *ngIf="model.inputType == eInputType.floating" floating>{{model?.placeholder|translate}}</ion-label>
+    <!-- stacked input -->
+    <ion-label *ngIf="model.inputType == eInputType.stacked" stacked>{{model?.placeholder|translate}}</ion-label>
+    <ion-input #searchInput (blur)='onBlur()' id="googlePlacesSearchInputWrapper" [(ngModel)]="autocomplete.value"
+      (input)="updateSearchResults()" type="text" [required]="required"></ion-input>
+  </ion-item>
+  <div class="auto-complete-items" [hidden]="autocompleteItems.length == 0">
+    <button ion-button clear type="button" (click)="$event.stopPropagation(); autocompleteItems = []; initAutoComplete()"
+      class="hide-auto-complete" *ngIf="model?.multiple">
+      <ion-icon name="close" color="danger"></ion-icon>
+    </button>
+    <ion-list no-margin>
+      <ion-item *ngFor="let item of autocompleteItems" tappable (click)="selectSearchResult(item)">
+        <ion-icon *ngIf="!model?.multiple" name="pin" [color]="model?.iconColor" item-start></ion-icon>
+        <ion-label>{{ item.description }}</ion-label>
+        <ion-checkbox *ngIf="model?.multiple" [color]="model.checkBoxColor" [checked]="isLocationSelected(item)"
+          (ionChange)="selectSearchResult(item)"></ion-checkbox>
+      </ion-item>
+    </ion-list>
+  </div>
+</div>
+<div class="value-chips-wrapper" *ngIf="autocompleteArray.length && model?.multiple">
+  <div class="value-chip" *ngFor="let item of autocompleteArray">
+    <div>
+      {{item.value}}
+    </div>
+    <div (click)="removeItemFromAutocompleteArray(item)">
+      <ion-icon name="close" color="danger"></ion-icon>
+    </div>
+  </div>
 </div>
