--- a/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.html
+++ b/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.html
@@ -1,5 +1,6 @@
 <div class="rw-ionic3-google-maps-autocomplete-wrapper">
-  <ion-item text-wrap #inputContainer class="input-container" [ngClass]="{'input-container-error':isFormSubmitted() && model?.required && !autocomplete.value}">
+  <ion-item text-wrap #inputContainer class="input-container"
+    [ngClass]="{'input-container-error':isFormSubmitted() && model?.required && !autocomplete.value}">
     <ion-icon item-start name="pin" [color]="model?.iconColor" *ngIf="!model?.hideIcon"></ion-icon>
     <!-- default input-->
     <ion-label *ngIf="!model.inputType" fixed>{{model?.placeholder|translate}}</ion-label>
@@ -13,9 +14,11 @@
       (input)="updateSearchResults()" type="text" [required]="required"></ion-input>
   </ion-item>
   <div class="auto-complete-items" [hidden]="autocompleteItems.length == 0">
-    <button ion-button clear type="button" (click)="$event.stopPropagation(); autocompleteItems = []; initAutoComplete()"
-      class="hide-auto-complete" *ngIf="model?.multiple">
-      <ion-icon name="close" color="danger"></ion-icon>
+    <button ion-button clear type="button"
+      (click)="$event.stopPropagation(); autocompleteItems = []; initAutoComplete()" class="hide-auto-complete"
+      *ngIf="model?.multiple">
+      <ion-icon [name]="model.closeIcon ? model.closeIcon : 'close'"
+        [color]="model.closeIconColor ? model.closeIconColor : 'danger'"></ion-icon>
     </button>
     <ion-list no-margin>
       <ion-item *ngFor="let item of autocompleteItems" tappable (click)="selectSearchResult(item)">
