--- a/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.scss
+++ b/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.scss
@@ -20,7 +20,11 @@ rw-ionic3-google-maps-autocomplete-input {
             position: absolute;
             width: 100%;
             z-index: 100;
-            box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.329412)
+            box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.329412);
+            
+            ion-item {
+                background-color: map-get($map: $colors, $key: appYellow);   
+            }
         }
     }
     .hide-auto-complete {
