--- a/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.html
+++ b/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.html
@@ -3,13 +3,13 @@
     [ngClass]="{'input-container-error':isFormSubmitted() && model?.required && !autocomplete.value}">
     <ion-icon item-start name="pin" [color]="model?.iconColor" *ngIf="!model?.hideIcon"></ion-icon>
     <!-- default input-->
-    <ion-label *ngIf="!model.inputType" fixed>{{model?.placeholder|translate}}</ion-label>
+    <ion-label *ngIf="!model.inputType" fixed><span class="{{model.label?.addClassess}}"> {{model?.placeholder|translate}}</span></ion-label>
     <!-- fixed input -->
-    <ion-label *ngIf="model.inputType == eInputType.fixed" fixed>{{model?.placeholder|translate}}</ion-label>
+    <ion-label *ngIf="model.inputType == eInputType.fixed" fixed><span class="{{model.label?.addClassess}}">{{model?.placeholder|translate}}</span></ion-label>
     <!-- floating input -->
-    <ion-label *ngIf="model.inputType == eInputType.floating" floating>{{model?.placeholder|translate}}</ion-label>
+    <ion-label *ngIf="model.inputType == eInputType.floating" floating><span class="{{model.label?.addClassess}}">{{model?.placeholder|translate}}</span></ion-label>
     <!-- stacked input -->
-    <ion-label *ngIf="model.inputType == eInputType.stacked" stacked>{{model?.placeholder|translate}}</ion-label>
+    <ion-label *ngIf="model.inputType == eInputType.stacked" stacked><span class="{{model.label?.addClassess}}">{{model?.placeholder|translate}}</span></ion-label>
     <ion-input #searchInput (ionBlur)='onBlur()' id="googlePlacesSearchInputWrapper" [(ngModel)]="autocomplete.value"
       (input)="updateSearchResults()" type="text" [required]="required"></ion-input>
   </ion-item>
