--- a/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.html
+++ b/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.html
@@ -1,5 +1,5 @@
 <div class="rw-ionic3-google-maps-autocomplete-wrapper">
-  <ion-item text-wrap #inputContainer class="input-container"
+  <ion-item (click)="searchInput.setFocus()" text-wrap #inputContainer class="input-container"
     [ngClass]="{'input-container-error':isFormSubmitted() && model?.required && !autocomplete.value}">
     <ion-icon item-start name="pin" [color]="model?.iconColor" *ngIf="!model?.hideIcon"></ion-icon>
     <!-- default input-->
