--- a/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.scss
+++ b/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.scss
@@ -4,7 +4,7 @@ rw-ionic3-google-maps-autocomplete-input {
     //     input {
     //         margin: 0.45vh; // font-size: $font-size-input;
     //     }
-    // }    
+    // }
     // .input-container-error {
     //     input {
     //         color: red;
@@ -21,9 +21,9 @@ rw-ionic3-google-maps-autocomplete-input {
             width: 100%;
             z-index: 100;
             box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.329412);
-            
+
             ion-item {
-                background-color: map-get($map: $colors, $key: appYellow);   
+                background-color: var(--ion-color- appYellow);
             }
         }
     }
