iionic4 migration WIP

--- a/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.html
+++ b/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.html
@@ -1,5 +1,5 @@
 <div class="rw-ionic3-google-maps-autocomplete-wrapper">
-  <ion-item text-wrap #inputContainer class="input-container" [lines]="!model?.fullLine || 'full'"
+  <ion-item class="ion-text-wrap" #inputContainer class="input-container" [lines]="!model?.fullLine || 'full'"
     [ngClass]="{'input-container-error':isFormSubmitted() && model?.required && !autocomplete.value}">
     <ion-icon item-start name="pin" [color]="model?.iconColor" *ngIf="!model?.hideIcon"></ion-icon>
     <!-- default input-->
@@ -20,7 +20,7 @@
       <ion-icon [name]="model.closeIcon ? model.closeIcon : 'close'"
         [color]="model.closeIconColor ? model.closeIconColor : 'danger'"></ion-icon>
     </button>
-    <ion-list no-margin>
+    <ion-list class="ion-no-margin">
       <ion-item *ngFor="let item of autocompleteItems" tappable (click)="selectSearchResult(item)">
         <ion-icon *ngIf="!model?.multiple" name="pin" [color]="model?.iconColor" item-start></ion-icon>
         <ion-label>{{ item.description }}</ion-label>
