--- a/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.html
+++ b/src/components/rw-ionic3-google-maps-autocomplete-input/rw-ionic3-google-maps-autocomplete-input.html
@@ -1,5 +1,5 @@
 <div class="rw-ionic3-google-maps-autocomplete-wrapper">
-  <ion-item class="ion-text-wrap" #inputContainer class="input-container" [lines]="!model?.fullLine || 'full'"
+  <ion-item [lines]="model?.lines" class="ion-text-wrap" #inputContainer class="input-container" [lines]="!model?.fullLine || 'full'"
     [ngClass]="{'input-container-error':isFormSubmitted() && model?.required && !autocomplete.value}">
     <ion-icon item-start name="pin" [color]="model?.iconColor" *ngIf="!model?.hideIcon"></ion-icon>
     <!-- default input-->
